@@ -3,6 +3,7 @@
 	* ?-? :
 	Added ChangeLog.
 	Updated package url.
+	Added a .desktop file.
 
 2011-??-?? Frederik "Freso" S. Olesen <archlinux@freso.dk>
 
